# clazydbm

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  install.sh
dev/: config.sample.yaml  docker-compose.yml
dev/mysql-init/: 001_init.sql
dev/postgres-init/: 001_init.sql
scripts/: dev-demo.sh  seed-sqlite.sh
src/: app.rs  cmd.rs  config.rs  connection.rs  logger.rs  main.rs  msg.rs  terminal.rs  update.rs
src/component/: connection.rs  dashboard.rs  dblist.rs  mod.rs  root.rs  table.rs
src/db/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
