[package]
name = "clazydbm"
version = "0.2.0"
edition = "2021"
authors = ["fujis"]
description = "A modern Terminal User Interface (TUI) database management tool for PostgreSQL, MySQL, and SQLite"
readme = "README.md"
homepage = "https://github.com/ppdx999/clazydbm"
repository = "https://github.com/ppdx999/clazydbm"
license = "MIT"
keywords = ["database", "tui", "postgresql", "mysql", "sqlite"]
categories = ["command-line-utilities", "database"]
default-run = "clazydbm"
include = [
    "src/**/*",
    "assets/**/*",
    "README.md",
    "LICENSE",
    "Cargo.toml"
]

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1"
dirs-next = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
async-trait = "0.1.89"
clap = { version = "4", features = ["derive"] }

[dependencies.mysql]
version = "24"
default-features = false

[dependencies.postgres]
version = "0.19"
default-features = false

[dependencies.rusqlite]
version = "0.31"
features = ["bundled"]

## backend features disabled; build all three backends always

[dependencies.flate2]
version = "1"
default-features = false
features = ["rust_backend"]
